completed UI of Contact Us component

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,3 +37,16 @@
   }
 }
 
+/* MUI Customizations */
+/* .MuiOutlinedInput-notchedOutline {
+  border-color: blue !important;
+}
+
+.MuiFilledInput-root {
+  border-bottom: 1px solid #53af5b !important;
+}
+
+.MuiInput-root {
+  border-bottom: 1px solid #53af5b !important;
+} */
+
